# grafana-mcp-integration-

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
config/: example.env
docs/: README.md
scripts/: setup-dev.sh
src/k8s_debugger/: __init__.py  _version.py  cli.py
src/k8s_debugger/client/: __init__.py  debugger.py  mcp_client.py
src/k8s_debugger/config/: __init__.py  settings.py
src/k8s_debugger/server/: __init__.py  error_handling.py  grafana_mcp_client.py  mcp_server.py  tools.py
src/k8s_debugger/utils/: __init__.py  logging.py  time_utils.py
